# quickHailoRT

./: .gitignore  README.md  TODO.md  analyze_logs.py  config.yaml  starter.sh  test.py
docs/: BACKGROUND.md  CODE_REVIEW_2026-05-09.md  CPP_VSTREAM_OWNERSHIP.md  HAILO8_COMPATIBILITY.md  HAILORT_INFER_API.md  HAILORT_INSTALL.md  INSTALL_LOG.md  SESSION_2_USERSPACE.md
docs/shell_guide/: fileValid.sh
history/: 2026-05-09_logging.md  2026-05-09_logging2.md  2026-05-10_logging.md  2026-05-11_logging1.md  2026-05-12_logging1.md  2026-05-15_logging1.md  2026-05-17_logging1.md
logs/: 2026-05-09_145233.csv  2026-05-09_150019.csv  2026-05-09_150216.csv  2026-05-09_150414.csv  2026-05-09_150547.csv  2026-05-09_151722.csv  2026-05-09_152546.csv  2026-05-09_184315.csv  2026-05-09_190935.csv  2026-05-09_193850.csv  2026-05-09_194104.csv  2026-05-09_194202.csv  2026-05-09_194658.csv  2026-05-09_212316.csv  2026-05-11_145937.csv  2026-05-11_150109.csv  2026-05-11_150201.csv  2026-05-11_150440.csv  2026-05-11_150724.csv  2026-05-11_150735.csv  2026-05-11_154005.csv  2026-05-11_161125.csv  2026-05-11_192736.csv  2026-05-11_195917.csv  2026-05-11_200131.csv  2026-05-11_200435.csv  2026-05-11_200444.csv  2026-05-11_201408.csv  2026-05-11_201409.csv  2026-05-11_201439.csv  2026-05-11_201440.csv  2026-05-11_202531.csv  2026-05-11_202532.csv  2026-05-11_203510.csv  2026-05-11_204001.csv  2026-05-11_204618.csv  2026-05-12_135728.csv  2026-05-12_151640.csv  2026-05-12_151759.csv  2026-05-12_152609.csv
scripts/: CheckRequirements.sh  Install.sh  Verify.sh  analyze_log.py  analyze_video_log.py
src/SAHI_object_detection/: CMakeLists.txt  README.md  build.sh  object_detection.cpp  object_detection_video.cpp
src/classification/: CMakeLists.txt  README.md  build.sh  classifier.cpp  config.yaml
src/common/: INFER_ARCHITECTURE.md  cli.hpp  hailo_infer.cpp  hailo_infer.hpp  logging.cpp  logging.hpp  slicing.cpp  slicing.h  toolbox.cpp  toolbox.hpp
src/zero_shot_classification/: CMakeLists.txt  README.md  build.sh  clip_example.cpp  download_resources.sh  text_label.yaml
src/zero_shot_classification/npy/: clip_vit_b_16_text_projection.npy
src/zero_shot_classification/tokenizer/: nn_embeddings.hpp  tokenizer.cpp  tokenizer.hpp
